@@ -229,4 +229,7 @@
   <data name="UOFiddler9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UOFiddler9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="animation-edit(3)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\animation-edit(3).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
